--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(0, 0, 0, 0.938);
+    background-color: rgb(0, 0, 0);
     padding: 10px;
 }
 
@@ -11,7 +11,7 @@ body {
     z-index: 100;
     border-radius: 10px;
     letter-spacing: 5px;
-    background-color: rgba(1, 0, 5, 0.075);
+    background-color: rgba(17, 17, 19, 0.26);
 }
 
 .home {
@@ -20,7 +20,6 @@ body {
     float: right;
     color: rgba(247, 250, 244, 0.959);
     word-spacing: 20px;
-    background-color: rgba(17, 17, 19, 0.26);
 }
 
 .name {
@@ -51,7 +50,7 @@ body {
     color: rgb(228, 217, 217);
     background-color: rgba(3, 8, 8, 0.719);
     position: absolute;
-    top: 700px;
+    top: 680px;
     right: 16px;
     text-align: center;
     overflow: auto;
@@ -68,8 +67,41 @@ body {
     /* for Chrome, Safari, and Opera */
 }
 
+.read {
+    display: flex;
+    background-color: rgb(20, 3, 82);
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.itm {
+    background-color: rgba(234, 235, 241, 0.109);
+    border-radius: 10px;
+}
+
+#it1 {
+    padding: 10px;
+    margin: 10px;
+}
+
+#it2 {
+    padding: 10px;
+    margin: 10px;
+}
+
+#it3 {
+    padding: 10px;
+    margin: 10px;
+}
+
+#it4 {
+    padding: 10px;
+    margin: 10px;
+}
+
 .contact-section {
-    background-color: rgba(3, 3, 3, 0.945);
+    background-color: rgba(29, 28, 28, 0.336);
     border-radius: 20px;
 }
 
