--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(0, 0, 0);
-    padding: 10px;
+    padding: 0px;
+    margin: 0px;
 }
 
 .nav-flex {
@@ -40,6 +41,7 @@ body {
     position: relative;
     height: 500px;
     width: 100%;
+    margin: 0 auto;
 }
 
 .top-right {
@@ -50,8 +52,8 @@ body {
     color: rgb(228, 217, 217);
     background-color: rgba(3, 8, 8, 0.719);
     position: absolute;
-    top: 680px;
-    right: 16px;
+    top: 660px;
+    right: 0px;
     text-align: center;
     overflow: auto;
     /* to hide scrollbar without removing scrolling*/
@@ -67,36 +69,68 @@ body {
     /* for Chrome, Safari, and Opera */
 }
 
-.read {
+.read-container {
     display: flex;
-    background-color: rgb(20, 3, 82);
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    background-color: rgba(228, 225, 238, 0.527);
+    flex-flow: row wrap;
+    justify-content: space-evenly;
 }
 
 .itm {
-    background-color: rgba(234, 235, 241, 0.109);
-    border-radius: 10px;
+    width: 500px;
+    height: 50%;
+    background-color: rgba(7, 7, 8, 0.445);
+    border-radius: 20px;
+}
+
+.head {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-family: monospace;
+    font-size: 20px;
+}
+
+.sec {
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 5px;
+    font-family: cursive;
+    font-size: 20px;
+    text-align: center;
+    overflow-wrap: normal;
+}
+
+.foot {
+    background-color: rgba(5, 3, 99, 0.294);
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-family: cursive;
+    font-size: 20px;
+    border-radius: 20px;
+}
+
+.image1 {
+    height: 400px;
+    width: 100%;
 }
 
 #it1 {
-    padding: 10px;
     margin: 10px;
 }
 
 #it2 {
-    padding: 10px;
     margin: 10px;
 }
 
 #it3 {
-    padding: 10px;
     margin: 10px;
 }
 
 #it4 {
-    padding: 10px;
     margin: 10px;
 }
 
